--- a/starter/02-HTML-Fundamentals/challenge.html
+++ b/starter/02-HTML-Fundamentals/challenge.html
@@ -6,17 +6,19 @@
 
     <title>Challenges</title>
   </head>
-  <article>
-    <h2>Converse low Top</h2>
-    <img src="./img/challenges.jpg" alt="challenges" width="300" />
-    <p class="price"><strong>$60.0</strong></p>
-    <p class="shipping">Free shipping</p>
-    <a class="more-info" href="#">More Information &rarr;</a>
-    <h3 class="detail-title">Product details</h3>
-    <ul class="detail-list">
-      <li>light</li>
-      <li>comfort</li>
-    </ul>
-  </article>
-  <button class="cart">add to cart</button>
+  <body>
+    <article>
+      <h2>Converse low Top</h2>
+      <img src="./img/challenges.jpg" alt="challenges" width="300" />
+      <p class="price"><strong>$60.0</strong></p>
+      <p class="shipping">Free shipping</p>
+      <a class="more-info" href="#">More Information &rarr;</a>
+      <h3 class="detail-title">Product details</h3>
+      <ul class="detail-list">
+        <li>light</li>
+        <li>comfort</li>
+      </ul>
+    </article>
+    <button class="cart">add to cart</button>
+  </body>
 </html>
