--- a/starter/02-HTML-Fundamentals/challenge.html
+++ b/starter/02-HTML-Fundamentals/challenge.html
@@ -13,6 +13,11 @@
       <p class="price"><strong>$60.0</strong></p>
       <p class="shipping">Free shipping</p>
       <a class="more-info" href="#">More Information &rarr;</a>
+      <div class="color-pick">
+        <div class="color"></div>
+        <div class="color color-red"></div>
+        <div class="color color-green"></div>
+      </div>
       <h3 class="detail-title">Product details</h3>
       <ul class="detail-list">
         <li>light</li>
@@ -20,5 +25,6 @@
       </ul>
     </article>
     <button class="cart">add to cart</button>
+    <p class="sale">SALE</p>
   </body>
 </html>
