--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -17,8 +17,15 @@
     <article>
       <header>
         <h2>The Basic Language of the Web: HTML</h2>
-        <img src="./img/laura-jones.jpg" alt="laura jones" width="50" />
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <img
+          calss="author-img"
+          src="./img/laura-jones.jpg"
+          alt="laura jones"
+          width="50"
+        />
+        <p class="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
         <img src="./img/post-img.jpg" alt="code on screen" width="500" />
       </header>
       <p>
