--- a/starter/02-HTML-Fundamentals/challenge.html
+++ b/starter/02-HTML-Fundamentals/challenge.html
@@ -9,20 +9,31 @@
   <body>
     <article>
       <h2>Converse low Top</h2>
-      <img src="./img/challenges.jpg" alt="challenges" width="300" />
-      <p class="price"><strong>$60.0</strong></p>
-      <p class="shipping">Free shipping</p>
-      <a class="more-info" href="#">More Information &rarr;</a>
-      <div class="color-pick">
-        <div class="color"></div>
-        <div class="color color-red"></div>
-        <div class="color color-green"></div>
+      <img
+        class="product-img"
+        src="./img/challenges.jpg"
+        alt="challenges"
+        width="250"
+      />
+      <div class="product-info">
+        <p class="price"><strong>$60.0</strong></p>
+        <p class="shipping">Free shipping</p>
+        <div class="clear-fix"></div>
+        <a class="more-info" href="#">More Information &rarr;</a>
+        <div class="color-pick">
+          <div class="color"></div>
+          <div class="color color-red"></div>
+          <div class="color color-green"></div>
+        </div>
       </div>
-      <h3 class="detail-title">Product details</h3>
-      <ul class="detail-list">
-        <li>light</li>
-        <li>comfort</li>
-      </ul>
+
+      <div class="product-detail">
+        <h3 class="detail-title">Product details</h3>
+        <ul class="detail-list">
+          <li>light</li>
+          <li>comfort</li>
+        </ul>
+      </div>
     </article>
     <button class="cart">add to cart</button>
     <p class="sale">SALE</p>
