--- a/starter/02-HTML-Fundamentals/challenge.html
+++ b/starter/02-HTML-Fundamentals/challenge.html
@@ -9,30 +9,33 @@
   <body>
     <article>
       <h2>Converse low Top</h2>
-      <img
-        class="product-img"
-        src="./img/challenges.jpg"
-        alt="challenges"
-        width="250"
-      />
-      <div class="product-info">
-        <p class="price"><strong>$60.0</strong></p>
-        <p class="shipping">Free shipping</p>
-        <div class="clear-fix"></div>
-        <a class="more-info" href="#">More Information &rarr;</a>
-        <div class="color-pick">
-          <div class="color"></div>
-          <div class="color color-red"></div>
-          <div class="color color-green"></div>
+      <div class="row">
+        <img
+          class="product-img"
+          src="./img/challenges.jpg"
+          alt="challenges"
+          width="250"
+        />
+        <div class="product-info">
+          <div class="price-ship-row">
+            <p class="price"><strong>$60.0</strong></p>
+            <p class="shipping">Free shipping</p>
+          </div>
+          <a class="more-info" href="#">More Information &rarr;</a>
+          <div class="color-pick">
+            <div class="color"></div>
+            <div class="color color-red"></div>
+            <div class="color color-green"></div>
+          </div>
         </div>
-      </div>
 
-      <div class="product-detail">
-        <h3 class="detail-title">Product details</h3>
-        <ul class="detail-list">
-          <li>light</li>
-          <li>comfort</li>
-        </ul>
+        <div class="product-detail">
+          <h3 class="detail-title">Product details</h3>
+          <ul class="detail-list">
+            <li>light</li>
+            <li>comfort</li>
+          </ul>
+        </div>
       </div>
     </article>
     <button class="cart">add to cart</button>
