--- a/starter/03-CSS-Fundamentals/css-grid.html
+++ b/starter/03-CSS-Fundamentals/css-grid.html
@@ -40,10 +40,30 @@
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        /* grid-template-rows: 300px 200px; */
+        grid-template-rows: 1fr 1fr;
+        /* gap: 30px; */
+        column-gap: 30px;
+        row-gap: 60px;
+      }
+
+      .el--8 {
+        grid-column: 2/ 3;
+        grid-row: 1 / 2;
+      }
+
+      .el--2 {
+        /* grid-column: 1 / span 2; */
+        grid-column: 1 / 2;
+
+        grid-row: 2/3;
       }
 
       .container--2 {
         /* STARTER */
+        display: none;
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
