--- a/starter/03-CSS-Fundamentals/flexbox.html
+++ b/starter/03-CSS-Fundamentals/flexbox.html
@@ -42,7 +42,29 @@
         /* FLEXBOX */
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
+        gap: 10px;
+      }
+      .el {
+        /* 
+        default:
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto; 
+        */
+        /* flex-basis: 200px; */
+        flex: 1;
+      }
+      .el--1 {
+        align-self: flex-start;
+        /* flex-grow: 5; */
+      }
+      .el--5 {
+        align-self: stretch;
+        order: 1;
+      }
+      .el--6 {
+        order: -1;
       }
     </style>
   </head>
